test/fail/fail_9.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_9.prsl:10:5: error: at 'a': Attempt to access an undef variable

a = 10;
f1 = func(a) {
    a;
}
f2 = func() {
    a;
}